# toycrypto

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: c-cpp.yml  codeql-analysis.yml  codeql.yml  main.yml
include/: cryptotest.hpp  toycrypto.hpp
include/toycrypto/common/: util.h
include/toycrypto/hash/: blake.h  blake2.h  hash_common.h  md2.h  md4.h  md5.h  sha1.h  sha2.h  sha3.h
include/toycrypto/internal/: common.h  exceptions.h  hashbase.h  headerstuff.h
src/: CMakeLists.txt  blake.cpp  blake.hpp  blake2.cpp  common.cpp  common.hpp  main.cpp  md.hpp  md2.cpp  md4.cpp  md5.cpp  md6.cpp  sha.hpp  sha1.cpp  sha2.cpp  sha3.cpp  tcexceptions.cpp  test.cpp  testing.cpp
src/common/: CMakeLists.txt  util.cpp
src/hash/: CMakeLists.txt  blake.cpp  blake2.cpp  hash_common.cpp  md2.cpp  md4.cpp  md5.cpp  sha1.cpp  sha2.cpp  sha3.cpp
src/internal/: CMakeLists.txt  hashbase.cpp
src/testing/: test_common.cpp
tests/: CMakeLists.txt  common_test.cpp  common_test.hpp  foo_test.cpp  test_chars_to_32.cpp  test_chars_to_64.cpp  test_leftrotate_32.cpp  test_leftrotate_64.cpp  test_md2.cpp  test_md2_file.cpp  test_md4.cpp  test_md4_file.cpp  test_md5.cpp  test_md5_file.cpp  test_rightrotate_32.cpp  test_rightrotate_64.cpp  test_sha1.cpp  test_sha1_file.cpp  test_sha224.cpp  test_sha224_file.cpp  test_sha256.cpp  test_sha256_file.cpp  test_sha3-224.cpp  test_sha3-256.cpp  test_sha3-384.cpp  test_sha3-512.cpp  test_sha384.cpp  test_sha384_file.cpp  test_sha512.cpp  test_sha512_224.cpp  test_sha512_224_file.cpp  test_sha512_256.cpp  test_sha512_256_file.cpp  test_sha512_file.cpp  test_shake128.cpp  test_shake256.cpp  testfile.txt  unittests.cpp
tests/common/: CMakeLists.txt  rotate_test.cpp
tests/hash/: CMakeLists.txt  blake224_test.cpp  blake256_salted_test.cpp  blake256_test.cpp  blake2b_keyed_test.cpp  blake2b_test.cpp  blake2s_keyed_test.cpp  blake2s_test.cpp  blake384_salted_test.cpp  blake384_test.cpp  blake512_test.cpp  md2_test.cpp  md4_test.cpp  md5_test.cpp  rotate_test.cpp  sha1_test.cpp  sha224_test.cpp  sha256_test.cpp  sha384_test.cpp  sha3_224_test.cpp  sha3_256_test.cpp  sha3_384_test.cpp  sha3_512_test.cpp  sha512_test.cpp  shake128_test.cpp  shake256_test.cpp
